objects/AFSC__FS_URL_Scan_Log__c.object
<CustomObject>
    <description>F-Secure Cloud Protection: URL scan event logs</description>
    <fields>
        <fullName>AFSC__Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Blocked</fullName>
                    <color>#CC0000</color>
                    <label>Blocked</label>
                </value>
                <value>
                    <fullName>Passed</fullName>
                    <color>#009900</color>
                    <label>Passed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AFSC__Categories__c</fullName>
        <label>Categories</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>abortion</fullName>
                </value>
                <value>
                    <fullName>adserving</fullName>
                </value>
                <value>
                    <fullName>adult</fullName>
                </value>
                <value>
                    <fullName>alcohol and tobacco</fullName>
                </value>
                <value>
                    <fullName>anonymizers</fullName>
                </value>
                <value>
                    <fullName>auctions</fullName>
                </value>
                <value>
                    <fullName>banking</fullName>
                </value>
                <value>
                    <fullName>blogs</fullName>
                </value>
                <value>
                    <fullName>chat</fullName>
                </value>
                <value>
                    <fullName>dating</fullName>
                </value>
                <value>
                    <fullName>drugs</fullName>
                </value>
                <value>
                    <fullName>entertainment</fullName>
                </value>
                <value>
                    <fullName>gambling</fullName>
                </value>
                <value>
                    <fullName>games</fullName>
                </value>
                <value>
                    <fullName>hacking</fullName>
                </value>
                <value>
                    <fullName>hate</fullName>
                </value>
                <value>
                    <fullName>job search</fullName>
                </value>
                <value>
                    <fullName>paymentservice</fullName>
                </value>
                <value>
                    <fullName>scam</fullName>
                </value>
                <value>
                    <fullName>shopping</fullName>
                </value>
                <value>
                    <fullName>social networking</fullName>
                </value>
                <value>
                    <fullName>software download</fullName>
                </value>
                <value>
                    <fullName>spam</fullName>
                </value>
                <value>
                    <fullName>streaming media</fullName>
                </value>
                <value>
                    <fullName>violence</fullName>
                </value>
                <value>
                    <fullName>warez</fullName>
                </value>
                <value>
                    <fullName>weapons</fullName>
                </value>
                <value>
                    <fullName>webmail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AFSC__Date_Time_Scanned__c</fullName>
        <label>Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AFSC__Direction__c</fullName>
        <label>Direction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Post</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AFSC__Disallowed_Category__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disallowed Category</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AFSC__IP_Address__c</fullName>
        <label>IP Address</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFSC__Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>URL</label>
        <referenceTo>AFSC__FSLink__c</referenceTo>
        <relationshipLabel>URL Scan</relationshipLabel>
        <relationshipName>URL_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AFSC__Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cases</fullName>
                </value>
                <value>
                    <fullName>Field Value</fullName>
                </value>
                <value>
                    <fullName>Chatter</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AFSC__Reason__c</fullName>
        <label>Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AFSC__Reputation_Desc__c</fullName>
        <label>Reputation Description</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Malicious</fullName>
                </value>
                <value>
                    <fullName>Not available</fullName>
                    <default>true</default>
                    <label>Not available</label>
                </value>
                <value>
                    <fullName>Safe</fullName>
                </value>
                <value>
                    <fullName>Suspicious</fullName>
                </value>
                <value>
                    <fullName>Trusted</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Unsafe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AFSC__Reputation_Text__c</fullName>
        <formula>IF(AFSC__Reputation__c &lt; -80, &quot;Malicious (&quot; &amp; TEXT(AFSC__Reputation__c) &amp; &quot;)&quot;,
	IF(AFSC__Reputation__c &lt; -20, &quot;Unsafe (&quot; &amp; TEXT(AFSC__Reputation__c) &amp; &quot;)&quot;,
		IF(AFSC__Reputation__c &lt; 0, &quot;Suspicious (&quot; &amp; TEXT(AFSC__Reputation__c) &amp; &quot;)&quot;,
			IF(AFSC__Reputation__c &lt; 80, &quot;Unknown (&quot; &amp; TEXT(AFSC__Reputation__c) &amp; &quot;)&quot;,
				IF(AFSC__Reputation__c &lt; 100, &quot;Safe (&quot; &amp; TEXT(AFSC__Reputation__c) &amp; &quot;)&quot;,
					IF(AFSC__Reputation__c = 100, &quot;Trusted (&quot; &amp; TEXT(AFSC__Reputation__c) &amp; &quot;)&quot;,
						&quot;Not available&quot;
					)
				)
			)
		)
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reputation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFSC__Reputation__c</fullName>
        <label>Reputation</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AFSC__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>URL_Scan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AFSC__Verdict__c</fullName>
        <label>Verdict</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Safe</fullName>
                    <color>#009900</color>
                    <label>Safe</label>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                    <color>#666666</color>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Unsafe</fullName>
                    <color>#CC0000</color>
                    <label>Unsafe</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>URL Scan</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>URL Scan</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>